--- a/assets/css/styles-4.css
+++ b/assets/css/styles-4.css
@@ -8,6 +8,10 @@
 */
 /* styles-4.css */
 /* ======= Base ======= */
+#kevin
+{
+  border-radius: 20px;
+}
 body {
   font-family: 'Roboto', sans-serif;
   color: #545E6C;
